Update to social links. Fix break in contact info when removing street address. Laying groundwork for user logins, viewing profile and active projects.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -106,7 +106,47 @@
     }
 }
 
+/* Allauth - templates/allauth/account or socialaccount */
+
+.accounts-section .info-wrap {
+    box-shadow: 0px 2px 15px rgb(0 0 0 / 10%);
+    padding: 30px;
+}
+
+.accounts-section input[type=text],
+.accounts-section input[type=password],
+.accounts-section input[type=email] {
+    margin: 0 auto;
+    height: 44px;
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 14px;
+    border-radius: 4px;
+    display: block;
+    width: 83%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
 /* Media Queries */
+
+@media (max-width: 1400px) {
+    .accounts-section input[type=text],
+    .accounts-section input[type=password] {
+        width: 100%;
+    }
+}
 
 @media (max-width: 991px) {
     .faq-sidebar {
